fixed hamburger menu problem still need to make map align on homepage though

--- a/static/style.css
+++ b/static/style.css
@@ -8693,6 +8693,7 @@ a.text-gray-dark:focus, a.text-gray-dark:hover {
   .arcobox {
     height: 100px;
     margin-top: 10%;
+    width: 45%;
   }
 
   .findahomegroupbtn {
@@ -8707,6 +8708,10 @@ a.text-gray-dark:focus, a.text-gray-dark:hover {
 
   .header-text {
     font-size: 125%;
+  }
+
+  .mapbox {
+    width: 85% !important;
   }
 }
 @media (min-width: 992px) {
@@ -8749,8 +8754,9 @@ a.text-gray-dark:focus, a.text-gray-dark:hover {
   }
 
   .arcobox {
-    height: 100px;
+    height: 80px;
     margin-top: 10%;
+    width: 45%;
   }
 
   .findahomegroupbtn {
@@ -8765,6 +8771,10 @@ a.text-gray-dark:focus, a.text-gray-dark:hover {
 
   .header-text {
     font-size: 125%;
+  }
+
+  .mapbox {
+    width: 85% !important;
   }
 }
 @media (min-width: 1200px) {
@@ -8803,8 +8813,9 @@ a.text-gray-dark:focus, a.text-gray-dark:hover {
   }
 
   .arcobox {
-    height: 100px;
+    height: 80px;
     margin-top: 10%;
+    width: 45%;
   }
 
   .findahomegroupbtn {
@@ -8819,5 +8830,9 @@ a.text-gray-dark:focus, a.text-gray-dark:hover {
 
   .header-text {
     font-size: 115%;
+  }
+
+  .mapbox {
+    width: 85% !important;
   }
 }
